<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="GVL_EnOcean" Id="{bec68ff9-8f1d-4ce1-b8b9-84de691aacc9}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
//Atrium
	strEnOceanSwitch_AtriumNiveau_PladeB				: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_AtriumNiveau_Service				: Tc2_EnOcean.STR_EnOceanSwitch;

//Gange
	strEnOceanSwitch_Gang_4_221_Indgang				: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Gang_4_221_Ekstra					: Tc2_EnOcean.STR_EnOceanSwitch;

//Rum
	strEnOceanSwitch_Rum_4_217								: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_4_219								: Tc2_EnOcean.STR_EnOceanSwitch;
	
	strEnOceanSwitch_Rum_4_231_Indgang				: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_4_231_Ekstra					: Tc2_EnOcean.STR_EnOceanSwitch;
	
	strEnOceanSwitch_Rum_5_237_Indgang				: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_5_237_Ekstra					: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_5_237_Pendler				: Tc2_EnOcean.STR_EnOceanSwitch;
	
	strEnOceanSwitch_Rum_5_243								: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_5_244								: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_5_247								: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_5_248								: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_5_251								: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_5_252								: Tc2_EnOcean.STR_EnOceanSwitch;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>